# native_toolcall_and_mcp

./: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt
comparison/: __init__.py  run_both.py
mcp_tool_calling/: __init__.py  agent.py  mcp_server.py  run.py
native_tool_calling/: __init__.py  agent.py  run.py
shared/: config.py  tools.py
